--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,16 @@ jobs:
     parallelism: 1
     working_directory: ~/Projects/1punch-api
     docker:
-       - image: circleci/ruby:2.4.2-node
+       - image: circleci/ruby:2.4.1-node
          environment:
+           PGHOST: 127.0.0.1
+           PGUSER: punch
            RAILS_ENV: test
-       - image: circleci/postgres:10
+       - image: circleci/postgres:9.6.2-alpine
+         environment:
+           POSTGRES_USER: punch
+           POSTGRES_DB: 1punch_test
+           POSTGRES_PASSWORD: ''
 
     steps:
       - checkout
@@ -31,9 +37,13 @@ jobs:
       - save_cache:
           paths:
             - ./vendor/bundle
-          key: 1punch-api0v1-dependencies-{{ checksum "Gemfile.lock" }}
+          key: 1punch-api-v1-dependencies-{{ checksum "Gemfile.lock" }}
 
-      - run: bin/setup
+      - run:
+          name: setup config files
+          command: |
+            cp config/database.yml.sample config/database.yml
+            cp config/secrets.yml.sample config/secrets.yml
       # Database setup
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
