--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,12 @@ jobs:
     parallelism: 1
     working_directory: ~/Projects/1punch-api
     docker:
-       - image: circleci/ruby:2.4.1-node
+       - image: circleci/ruby:2.4.2-node
          environment:
            PGHOST: 127.0.0.1
            PGUSER: punch
            RAILS_ENV: test
-       - image: circleci/postgres:9.6.2-alpine
+       - image: circleci/postgres:10-alpine-ram
          environment:
            POSTGRES_USER: punch
            POSTGRES_DB: 1punch_test
