Rubocop ignore frontend dir

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ AllCops:
   Exclude:
     - 'db/schema.rb'
     - 'doc/**/*'
+    - 'frontend/**/*'
   DisplayCopNames: true
   DisplayStyleGuide: true
   ExtraDetails: true
