--- a/.env.staging.sample
+++ b/.env.staging.sample
@@ -3,8 +3,11 @@ RAILS_ENV=staging
 RAILS_MAX_THREADS=5
 WEB_CONCURRENCY=2
 
-WEB_SECRET_KEY_BASE=
+SECRET_KEY_BASE=
 JWT_KEY=
 
 DATABASE_USER=
 DATABASE_PASSWORD=
+
+REDIS_URL=redis://127.0.0.1:6379
+REDIS_NAMESPACE=1punch_staging
