--- a/.env.production.sample
+++ b/.env.production.sample
@@ -3,8 +3,11 @@ RAILS_ENV=production
 RAILS_MAX_THREADS=5
 WEB_CONCURRENCY=3
 
-WEB_SECRET_KEY_BASE=
+SECRET_KEY_BASE=
 JWT_KEY=
 
 DATABASE_USER=
 DATABASE_PASSWORD=
+
+REDIS_URL=
+REDIS_NAMESPACE=
