--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "moment": "^2.20.1",
     "spectre.css": "^0.5.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuejs-datepicker": "^0.9.24",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
