--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "chart.js": "^2.7.1",
     "moment": "^2.20.1",
     "spectre.css": "^0.5.0",
     "vue": "^2.5.2",
