--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.5.2",
     "vue-i18n": "^7.4.1",
     "vue-router": "^3.0.1",
+    "vue-select": "^2.4.0",
     "vuejs-datepicker": "^0.9.24",
     "vuex": "^3.0.1"
   },
