--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,11 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "chart.js": "^2.7.1",
-    "moment": "^2.20.1",
+    "chart.js": "^2.7.2",
+    "moment-timezone": "^0.5.14",
     "spectre.css": "^0.5.0",
     "vue": "^2.5.2",
-    "vue-i18n": "^7.4.1",
+    "vue-i18n": "^7.6.0",
     "vue-router": "^3.0.1",
     "vue-select": "^2.4.0",
     "vuejs-datepicker": "^0.9.24",
@@ -58,8 +58,6 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "gulp": "^3.9.1",
-    "gulp-scss-lint": "^0.5.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.0",
     "jest-serializer-vue": "^0.3.0",
