Reconfig mailgun env var

--- a/.env.staging.sample
+++ b/.env.staging.sample
@@ -15,6 +15,6 @@ REDIS_NAMESPACE=1punch_staging
 BUGSNAG_API_KEY=
 LOGGLY_TOKEN=
 
-AWS_SES_HOST=
-AWS_SES_USERNAME=
-AWS_SES_PASSWORD=
+MAILGUN_HOST=
+MAILGUN_USERNAME=
+MAILGUN_PASSWORD=
