Rubocop ignore Rails/InverseOf at attendance/request file

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,11 @@ AllCops:
 Rails:
   Enabled: true
 
+Rails/InverseOf:
+  Exclude:
+    - 'app/models/attendance.rb'
+    - 'app/models/request.rb'
+
 Rails/NotNullColumn:
   Enabled: false
 
