--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.14",
     "spectre.css": "^0.5.0",
     "vue": "^2.5.2",
+    "vue-flatpickr-component": "^7.0.0",
     "vue-i18n": "^7.6.0",
     "vue-router": "^3.0.1",
     "vue-select": "^2.4.0",
