Update rubocop rules

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,7 +43,10 @@ Metrics/BlockLength:
   Enabled: false
 
 Metrics/LineLength:
-  Max: 160
+  Max: 200
+
+Metrics/ClassLength:
+  Max: 120
 
 Metrics/MethodLength:
   Max: 20
