Rubocop ignore some files and rubocop auto

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,11 @@ Rails/SkipsModelValidations:
   Exclude:
     - 'app/controllers/auth_controller.rb'
 
+Rails/ReversibleMigration:
+  Exclude:
+    - 'db/migrate/20180511092012_remove_attendance_id_of_requests.rb'
+    - 'db/migrate/20180511093242_drop_table_read_requests.rb'
+
 Lint/ScriptPermission:
   Enabled: false
 
