--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "glob-all": "^3.1.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.0",
     "jest-serializer-vue": "^0.3.0",
@@ -71,6 +72,7 @@
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "purgecss-webpack-plugin": "^0.22.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
     "selenium-server": "^3.0.1",
