--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "font-family-unescape-loader": "^1.1.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob-all": "^3.1.0",
     "html-webpack-plugin": "^2.30.1",
