--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -1,7 +1,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
+  pool: <%= ENV['DB_POOL'] %>
   username: minh
   password:
 
@@ -20,9 +20,9 @@ staging:
   username: <%= ENV['DATABASE_USER'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
   connect_timeout: 1
-  checkout_timeout: 5
+  checkout_timeout: 1
   variables:
-    statement_timeout: 5000
+    statement_timeout: 250
 
 production:
   <<: *default
@@ -32,4 +32,4 @@ production:
   connect_timeout: 1
   checkout_timeout: 5
   variables:
-    statement_timeout: 5000
+    statement_timeout: 250
