Update env variables

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -1,3 +1,4 @@
+APP_DOMAIN=punch.ooo
 RAILS_ENV=production
 
 RAILS_MAX_THREADS=5
@@ -16,7 +17,6 @@ REDIS_NAMESPACE=
 BUGSNAG_API_KEY=
 LOGGLY_TOKEN=
 
-MAILGUN_HOST=
-MAILGUN_DOMAIN=
-MAILGUN_USERNAME=
-MAILGUN_PASSWORD=
+SMTP_HOST=
+SMTP_USERNAME=
+SMTP_PASSWORD=
