--- a/.env.staging.sample
+++ b/.env.staging.sample
@@ -1,3 +1,4 @@
+APP_DOMAIN=buildcauhinh.com
 RAILS_ENV=staging
 
 RAILS_MAX_THREADS=5
@@ -16,7 +17,6 @@ REDIS_NAMESPACE=1punch_staging
 BUGSNAG_API_KEY=
 LOGGLY_TOKEN=
 
-MAILGUN_HOST=
-MAILGUN_DOMAIN=
-MAILGUN_USERNAME=
-MAILGUN_PASSWORD=
+SMTP_HOST=
+SMTP_USERNAME=
+SMTP_PASSWORD=
