--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2
 jobs:
   build:
     parallelism: 1
-    working_directory: ~/Projects/1punch-api
+    working_directory: ~/Projects/punch
     docker:
        - image: circleci/ruby:2.5.1-node
          environment:
