change script command line

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ jobs:
           name: Run Unit Tests
           command: |
             cd frontend/
-            yarn run unit
+            yarn run test:unit
 
       # collect reports
       - store_test_results:
