--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "vue-router": "^3.0.1",
     "vue-select": "^2.4.0",
     "vuejs-datepicker": "^0.9.24",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
