--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "lodash.debounce": "^4.0.8",
     "moment-timezone": "^0.5.14",
     "spectre.css": "^0.5.0",
+    "underscore": "^1.9.2",
     "vue": "^2.5.2",
     "vue-flatpickr-component": "^7.0.0",
     "vue-i18n": "^7.6.0",
