--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "tes:e2e": "node test/e2e/runner.js",
     "test": "npm run test:unit && npm run test:e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "lint:fix": "eslint --ext .js,.vue src --fix; exit 0",
     "build": "node build/build.js",
     "stylelint-check": "stylelint 'src/scss/**/*.scss' --config=.stylelintrc.json; exit 0",
     "stylelint-fix": "stylelint 'src/scss/**/*.scss' --syntax=scss --config=.stylelintrc.json --fix; exit 0",
