--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.17.1",
     "chart.js": "^2.7.2",
     "formdata-polyfill": "^3.0.10",
+    "immutable": "^4.0.0-rc.12",
     "lodash.debounce": "^4.0.8",
     "moment-timezone": "^0.5.14",
     "spectre.css": "^0.5.0",
