update circleCI && enable run unit test fe on circleCI (#775)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
            POSTGRES_DB: 1punch_test
            POSTGRES_PASSWORD: ''
        - image: redis
-       - image: circleci/node:8.11-browsers
+       - image: circleci/node:10.13.0-browsers
 
     steps:
       - checkout
@@ -51,7 +51,7 @@ jobs:
 
       - run:
           name: Install Node Package Dependencies
-          command: cd frontend && yarn install
+          command: cd frontend && yarn install --ignore-engines
 
       - save_cache:
           name: Save Yarn Package Cache
@@ -87,16 +87,16 @@ jobs:
           path: /tmp/test-results
           destination: test-results
 
-      # # run unit tests frontend!
-      # - run:
-      #     name: Run Unit Tests
-      #     command: |
-      #       cd frontend/
-      #       yarn run test:unit
+      # run unit tests frontend!
+      - run:
+          name: Run Store Unit Tests
+          command: |
+            cd frontend/
+            yarn run test:unit:ci
 
-      # # collect reports
-      # - store_test_results:
-      #     path: /tmp/test-results
-      # - store_artifacts:
-      #     path: /tmp/test-results
-      #     destination: test-results
+      # collect reports
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
