--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "test:unit": "jest --config test/unit/jest.conf.js --coverage --silent --maxWorkers=2",
+    "test:unit:ci": "jest test/unit/specs/store/modules --config test/unit/jest.conf.js --silent --maxWorkers=2",
+    "test:unit:store": "jest test/unit/specs/store/modules --config test/unit/jest.conf.js --coverage --silent",
     "tes:e2e": "node test/e2e/runner.js",
     "test": "npm run test:unit && npm run test:e2e",
     "lint": "eslint --ext .js,.vue src",
