--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "start": "npm run dev",
     "test:unit:ci": "jest test/unit/specs/store/modules --config test/unit/jest.conf.js --silent --maxWorkers=2",
     "test:unit:store": "jest test/unit/specs/store/modules --config test/unit/jest.conf.js --coverage --silent",
+    "test:unit": "jest --config test/unit/jest.conf.js --coverage --silent",
     "tes:e2e": "node test/e2e/runner.js",
     "test": "npm run test:unit && npm run test:e2e",
     "lint": "eslint --ext .js,.vue src",
@@ -74,7 +75,7 @@
     "glob-all": "^3.1.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^24.9.0",
-    "jest-serializer-vue": "^0.3.0",
+    "jest-serializer-vue": "^2.0.2",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.7.2",
