--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "test:unit:ci": "jest test/unit/specs/store/modules --config test/unit/jest.conf.js --silent --maxWorkers=2",
-    "test:unit:store": "jest test/unit/specs/store/modules --config test/unit/jest.conf.js --coverage --silent",
-    "test:unit": "jest --config test/unit/jest.conf.js --coverage --silent",
+    "test:unit": "jest --config test/unit/jest.conf.js -u --coverage",
     "tes:e2e": "node test/e2e/runner.js",
     "test": "npm run test:unit && npm run test:e2e",
     "lint": "eslint --ext .js,.vue src",
@@ -74,6 +73,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob-all": "^3.1.0",
     "html-webpack-plugin": "^2.30.1",
+    "husky": "^4.2.5",
     "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
     "nightwatch": "^0.9.12",
@@ -106,11 +106,17 @@
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+    "node": ">= 8.0.0",
+    "npm": ">= 3.0.0",
+    "yarn": ">= 1.17.3"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test:unit"
+    }
+  }
 }
